Updating linkedService: AzureBlobStorage_project01rfuster_kv

--- a/linkedService/AzureBlobStorage_project01rfuster_kv.json
+++ b/linkedService/AzureBlobStorage_project01rfuster_kv.json
@@ -10,7 +10,7 @@
 					"referenceName": "AzureKeyVault_project01rfuster",
 					"type": "LinkedServiceReference"
 				},
-				"secretName": "StorageAccountConnectionString2"
+				"secretName": "connectionStringsa1"
 			}
 		}
 	}
