Updating factory: project01rfusteradf

--- a/factory/project01rfusteradf.json
+++ b/factory/project01rfusteradf.json
@@ -1,5 +1,13 @@
 {
 	"name": "project01rfusteradf",
+	"properties": {
+		"globalParameters": {
+			"EnvironmentName": {
+				"type": "string",
+				"value": "Development"
+			}
+		}
+	},
 	"location": "brazilsouth",
 	"identity": {
 		"type": "SystemAssigned",
