Updating linkedService: AzureBlobStorage_project01rfuster_kv

--- a/linkedService/AzureBlobStorage_project01rfuster_kv.json
+++ b/linkedService/AzureBlobStorage_project01rfuster_kv.json
@@ -1,6 +1,7 @@
 {
 	"name": "AzureBlobStorage_project01rfuster_kv",
 	"properties": {
+		"description": "Utiliza key vault",
 		"annotations": [],
 		"type": "AzureBlobStorage",
 		"typeProperties": {
