--- a/factory/project01rfusteradf.json
+++ b/factory/project01rfusteradf.json
@@ -5,6 +5,10 @@
 			"EnvironmentName": {
 				"type": "string",
 				"value": "development"
+			},
+			"ResourceGroupName": {
+				"type": "string",
+				"value": "project01rfuster-rg"
 			}
 		}
 	},
