Set up CI with Azure Pipelines
[skip ci]

--- a/devops-pipelines/publish.yml
+++ b/devops-pipelines/publish.yml
@@ -4,10 +4,10 @@ trigger:
       - adf_publish
   paths:
     exclude:
-      - /devops-pipelines
+      - devops-pipelines
 pool:
   vmImage: 'ubuntu-latest'
-  
+
 steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
