--- a/devops-pipelines/publish.yml
+++ b/devops-pipelines/publish.yml
@@ -24,4 +24,5 @@ steps:
     csmParametersFile: 'project01rfusteradf/ARMTemplateParametersForFactory.json'
     overrideParameters: |
       - factoryName "project01rfusteradfprd"
+      - myKeyVaultUrl "$(myKeyVaultUrl)"
     deploymentMode: 'Incremental'
