--- a/linkedService/AzureKeyVault_project01rfuster.json
+++ b/linkedService/AzureKeyVault_project01rfuster.json
@@ -4,7 +4,7 @@
 		"annotations": [],
 		"type": "AzureKeyVault",
 		"typeProperties": {
-			"baseUrl": "https://project01rfusterkv13.vault.azure.net/"
+			"baseUrl": "https://kv0001desaetlsales.vault.azure.net/"
 		}
 	}
 }
