Updating linkedService: AzureBlobStorage_project01rfuster_kv

--- a/linkedService/AzureBlobStorage_project01rfuster_kv.json
+++ b/linkedService/AzureBlobStorage_project01rfuster_kv.json
@@ -11,7 +11,7 @@
 					"referenceName": "AzureKeyVault_project01rfuster",
 					"type": "LinkedServiceReference"
 				},
-				"secretName": "connectionStringsa1"
+				"secretName": "StorageAccount-sadesarrolloetlsales"
 			}
 		}
 	}
